Avanzando en los desafios

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1294,11 +1294,11 @@
         "print(f\"El nombre de la alumna es {nombre} y su edad es {edad} años.\")"
       ],
       "metadata": {
-        "id": "R7qnUfsvf1ht",
-        "outputId": "31c741df-22ec-4d7c-ae7b-78d1daf3defd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R7qnUfsvf1ht",
+        "outputId": "31c741df-22ec-4d7c-ae7b-78d1daf3defd"
       },
       "execution_count": 30,
       "outputs": [
@@ -1318,11 +1318,11 @@
         "print('Nombre del alumno: %s' %(nombre_alumno))"
       ],
       "metadata": {
-        "id": "8MngVi9mgje7",
-        "outputId": "2b021627-04a4-4391-9ca2-013e2840f2ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8MngVi9mgje7",
+        "outputId": "2b021627-04a4-4391-9ca2-013e2840f2ff"
       },
       "execution_count": 31,
       "outputs": [
@@ -1344,11 +1344,11 @@
         "print('Nombre del alumno es %s, tiene %d años y su media es %f.' %(nombre_alumno, edad_alumno, media_alumno))"
       ],
       "metadata": {
-        "id": "6h6R19b_gkze",
-        "outputId": "63fcb63d-41a4-427c-d051-b526ce83ebdc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6h6R19b_gkze",
+        "outputId": "63fcb63d-41a4-427c-d051-b526ce83ebdc"
       },
       "execution_count": 32,
       "outputs": [
@@ -1367,11 +1367,11 @@
         "print('Nombre del alumno es %s, tiene %d años y su media es %.2f.' %(nombre_alumno, edad_alumno, media_alumno))"
       ],
       "metadata": {
-        "id": "qrrgKTNRg9Kr",
-        "outputId": "09614f6b-37e3-4570-8c86-020d5cc928d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qrrgKTNRg9Kr",
+        "outputId": "09614f6b-37e3-4570-8c86-020d5cc928d4"
       },
       "execution_count": 33,
       "outputs": [
@@ -1391,11 +1391,11 @@
         "print(\"Valor de x: %s\" % str(x))"
       ],
       "metadata": {
-        "id": "1esBdQmlhIdR",
-        "outputId": "26720433-4996-4cb7-e11f-4f6641c402ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1esBdQmlhIdR",
+        "outputId": "26720433-4996-4cb7-e11f-4f6641c402ca"
       },
       "execution_count": 34,
       "outputs": [
@@ -1415,11 +1415,11 @@
         "print('Nombre del alumno: {}'.format(nombre_alumno))"
       ],
       "metadata": {
-        "id": "6joV2OvwhS9X",
-        "outputId": "c9cd75fa-94f4-440c-a70d-ee2e2ba489cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6joV2OvwhS9X",
+        "outputId": "c9cd75fa-94f4-440c-a70d-ee2e2ba489cf"
       },
       "execution_count": 35,
       "outputs": [
@@ -1441,11 +1441,11 @@
         "print('Nombre del alumno es {}, tiene {} años y su media es {}.' .format(nombre_alumno, edad_alumno, media_alumno))\n"
       ],
       "metadata": {
-        "id": "nCrs05LMhZjY",
-        "outputId": "a16d8730-f368-4954-b7fb-992b652a1dff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nCrs05LMhZjY",
+        "outputId": "a16d8730-f368-4954-b7fb-992b652a1dff"
       },
       "execution_count": 36,
       "outputs": [
@@ -1464,11 +1464,11 @@
         "print(\"Estudiar es un esfuerzo constante,\\nEs como cultivar una planta,\\nNecesitamos dedicación y paciencia,\\nPara ver madurar el fruto.\")\n"
       ],
       "metadata": {
-        "id": "ykfANBURhsUI",
-        "outputId": "2d3aa613-87be-4833-ee02-8679d9951312",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ykfANBURhsUI",
+        "outputId": "2d3aa613-87be-4833-ee02-8679d9951312"
       },
       "execution_count": 37,
       "outputs": [
@@ -1490,11 +1490,11 @@
         "print('Cantidad\\tCalidad\\n5 muestras\\tAlta\\n3 muestras\\tBaja')"
       ],
       "metadata": {
-        "id": "w4ZVY7k6hxFV",
-        "outputId": "62c05d03-2a64-43a9-adb0-84528c670cf4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w4ZVY7k6hxFV",
+        "outputId": "62c05d03-2a64-43a9-adb0-84528c670cf4"
       },
       "execution_count": 38,
       "outputs": [
@@ -1515,11 +1515,11 @@
         "print(\"Ruta del archivo: C:\\\\archivos\\\\documento.csv\")"
       ],
       "metadata": {
-        "id": "eEQ_Nq5gh6vk",
-        "outputId": "bf0b19e3-29fe-4d6e-e69c-6407890f27ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eEQ_Nq5gh6vk",
+        "outputId": "bf0b19e3-29fe-4d6e-e69c-6407890f27ac"
       },
       "execution_count": 39,
       "outputs": [
@@ -1538,11 +1538,11 @@
         "print(\"Una vez oí: \\\"Los frutos del conocimiento son los más dulces y duraderos de todos.\\\"\")"
       ],
       "metadata": {
-        "id": "a4Gcrnj2iFUl",
-        "outputId": "7697e0e6-f1fa-4997-f64e-f6f1508951aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a4Gcrnj2iFUl",
+        "outputId": "7697e0e6-f1fa-4997-f64e-f6f1508951aa"
       },
       "execution_count": 40,
       "outputs": [
@@ -1561,11 +1561,11 @@
         "print('Mi profesora una vez dijo: \\'Estudiar es la clave del éxito.\\'')"
       ],
       "metadata": {
-        "id": "rRNwuwZdiMWN",
-        "outputId": "30aa3356-2b90-4bd9-b5e0-2bd10503c3c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rRNwuwZdiMWN",
+        "outputId": "30aa3356-2b90-4bd9-b5e0-2bd10503c3c9"
       },
       "execution_count": 41,
       "outputs": [
@@ -1574,6 +1574,381 @@
           "name": "stdout",
           "text": [
             "Mi profesora una vez dijo: 'Estudiar es la clave del éxito.'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **DESAFIO**"
+      ],
+      "metadata": {
+        "id": "RSwoUFopi1p8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 - Crea un programa que solicite al usuario que escriba su nombre y luego imprima \"Hola, [nombre].\"\n",
+        "nombre = input('Ingrese su nombre: ')\n",
+        "print('\\\"Hola, {}.\\\"'.format(nombre))\n"
+      ],
+      "metadata": {
+        "id": "kgm05aSVjCwM",
+        "outputId": "c31cf95a-0769-4c96-a8cc-61548731834f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese su nombre: Florencia\n",
+            "\"Hola, Florencia.\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2 - Crea un programa que solicite al usuario que escriba su nombre y edad, y luego imprima \"Hola, [nombre], tienes [edad] años.\"\n",
+        "nombre = input('Ingrese su nombre: ')\n",
+        "edad = input('Ingrese su edad: ')\n",
+        "print('\\\"Hola, {}, tienes {} años.\\\"'.format(nombre, edad))"
+      ],
+      "metadata": {
+        "id": "apQKr40JkIa9",
+        "outputId": "2cff102a-3bf1-4f1d-fbaf-30e00b3a227a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese su nombre: Raquel\n",
+            "Ingrese su edad: 29\n",
+            "\"Hola, Raquel, tienes 29 años.\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3 - Crea un programa que solicite al usuario que escriba su nombre, edad y altura en metros, y luego imprima \"Hola, [nombre], tienes [edad] años y mides [altura] metros.\"\n",
+        "nombre = input('Ingrese su nombre: ')\n",
+        "edad = input('Ingrese su edad: ')\n",
+        "altura = input('Ingrese su altura en metros: ')\n",
+        "print('\\\"Hola, {}, tienes {} años y mides {} metros.\\\"'.format(nombre, edad, altura))\n"
+      ],
+      "metadata": {
+        "id": "uQb_O-uJk4wS",
+        "outputId": "066df1d6-40c8-4329-dfd4-3debe2fb22e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese su nombre: Daniel\n",
+            "Ingrese su edad: 30\n",
+            "Ingrese su altura en metros: 1,81\n",
+            "\"Hola, Daniel, tienes 30 años y mides 1,81 metros.\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4 - Crea un programa que solicite dos valores numéricos al usuario y luego imprima la suma de ambos valores.\n",
+        "numero1 = int(input('Ingrese el primer valor: '))\n",
+        "numero2 = int(input('Ingrese el segundo valor: '))\n",
+        "print('La suma de los valores es: {}'.format(numero1 + numero2))"
+      ],
+      "metadata": {
+        "id": "-q304Q6olNxW",
+        "outputId": "dfccf1d4-c5c2-4f7b-ba5c-8537323e868d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer valor: 2\n",
+            "Ingrese el segundo valor: 4\n",
+            "La suma de los valores es: 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5 - Crea un programa que solicite tres valores numéricos al usuario y luego imprima la suma de los tres valores.\n",
+        "numero1 = int(input('Ingrese el primer valor: '))\n",
+        "numero2 = int(input('Ingrese el segundo valor: '))\n",
+        "numero3 = int(input('Ingrese el tercer valor: '))\n",
+        "print('La suma de los valores es: {}'.format(numero1 + numero2 + numero3))"
+      ],
+      "metadata": {
+        "id": "BEqjCmnmlkOC",
+        "outputId": "24b1f711-5f8d-4507-c97d-5912b83c0543",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer valor: 3\n",
+            "Ingrese el segundo valor: 4\n",
+            "Ingrese el tercer valor: 5\n",
+            "La suma de los valores es: 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6 - Crea un programa que solicite dos valores numéricos al usuario y luego imprima la resta del primero menos el segundo valor.\n",
+        "numero1 = int(input('Ingrese el primer valor: '))\n",
+        "numero2 = int(input('Ingrese el segundo valor: '))\n",
+        "print('La resta de los valores es: {}'.format(numero1 - numero2))"
+      ],
+      "metadata": {
+        "id": "ndTG90i1lrwy",
+        "outputId": "85163cfb-111a-4f74-8dfb-45dbf0fb6d29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer valor: 9\n",
+            "Ingrese el segundo valor: 6\n",
+            "La resta de los valores es: 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 7 - Crea un programa que solicite dos valores numéricos al usuario y luego imprima la multiplicación de los dos valores.\n",
+        "numero1 = int(input('Ingrese el primer valor: '))\n",
+        "numero2 = int(input('Ingrese el segundo valor: '))\n",
+        "print('La multiplicación de los valores es: {}'.format(numero1 * numero2))"
+      ],
+      "metadata": {
+        "id": "cahWLvFgl_2m",
+        "outputId": "5550b8e5-16c9-4f20-ede1-a3b191ea4471",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer valor: 7\n",
+            "Ingrese el segundo valor: 4\n",
+            "La multiplicación de los valores es: 28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 8 - Crea un programa que solicite dos valores numéricos, un numerador y un denominador, y realice la división entre los dos valores. Asegúrate de que el valor del denominador no sea igual a 0.\n",
+        "numero1 = int(input('Ingrese el numerador: '))\n",
+        "numero2 = int(input('Ingrese el denominador: '))\n",
+        "print('La división de los valores es: {}'.format(numero1 / numero2))\n"
+      ],
+      "metadata": {
+        "id": "Gnw6ZZptmL3V",
+        "outputId": "e5b74dc5-1997-494c-dfc9-e287d34e7c2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el numerador: 8\n",
+            "Ingrese el denominador: 2\n",
+            "La división de los valores es: 4.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 9 - Crea un programa que solicite dos valores numéricos, un operador y una potencia, y realice la exponenciación entre estos dos valores.\n",
+        "numero1 = int(input('Ingrese el primer valor: '))\n",
+        "numero2 = int(input('Ingrese el segundo valor: '))\n",
+        "print('La exponenciación de los valores es: {}'.format(numero1 ** numero2))"
+      ],
+      "metadata": {
+        "id": "wyfK_yiCmbKt",
+        "outputId": "5e402c01-99ed-49ad-cd48-8e78c5038b3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer valor: 2\n",
+            "Ingrese el segundo valor: 2\n",
+            "La exponenciación de los valores es: 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 10 - Crea un programa que solicite dos valores numéricos, un numerador y un denominador, y realice la división entera entre los dos valores. Asegúrate de que el valor del denominador no sea igual a 0.\n",
+        "numero1 = int(input('Ingrese el numerador: '))\n",
+        "numero2 = int(input('Ingrese el denominador: '))\n",
+        "print('La división entera de los valores es: {}'.format(numero1 // numero2))"
+      ],
+      "metadata": {
+        "id": "jxAFIOawmoBq",
+        "outputId": "da436f6c-2602-43b1-8b18-9843d8db81e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el numerador: 10\n",
+            "Ingrese el denominador: 2\n",
+            "La división entera de los valores es: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 11 - Crea un programa que solicite dos valores numéricos, un numerador y un denominador, y devuelva el resto de la división entre los dos valores. Asegúrate de que el valor del denominador no sea igual a 0.\n",
+        "numero1 = int(input('Ingrese el numerador: '))\n",
+        "numero2 = int(input('Ingrese el denominador: '))\n",
+        "print('El resto de la división de los valores es: {}'.format(numero1 % numero2))"
+      ],
+      "metadata": {
+        "id": "9FOGkOh3mUlN",
+        "outputId": "6dae5844-1a87-4c3c-debf-e248a66f3ff7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el numerador: 65\n",
+            "Ingrese el denominador: 12\n",
+            "El resto de la división de los valores es: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 12 - Crea un código que solicite las 3 notas de un estudiante e imprima el promedio de las notas.\n",
+        "nota1 = float(input('Ingrese la primera nota: '))\n",
+        "nota2 = float(input('Ingrese la segunda nota: '))\n",
+        "nota3 = float(input('Ingrese la tercera nota: '))\n",
+        "promedio = (nota1 + nota2 + nota3) / 3\n",
+        "print('El promedio de las notas es: %.2f'%(promedio))"
+      ],
+      "metadata": {
+        "id": "TCSl3jkbnDfE",
+        "outputId": "a012b1f4-a8c7-4fa6-b19b-481762e4a178",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la primera nota: 5.6\n",
+            "Ingrese la segunda nota: 6.3\n",
+            "Ingrese la tercera nota: 6.8\n",
+            "El promedio de las notas es: 6.23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 13 - Crea un código que calcule e imprima el promedio ponderado de los números 5, 12, 20 y 15 con pesos respectivamente iguales a 1, 2, 3 y 4.\n",
+        "promedio = (5 * 1 + 12 * 2 + 20 * 3 + 15 * 4) / (1 + 2 + 3 + 4)\n",
+        "print('El promedio ponderado de los números es: %.2f'%(promedio))"
+      ],
+      "metadata": {
+        "id": "R0UVC2ZBpYmV",
+        "outputId": "4a73cdba-bfe1-4f0b-a6e7-9ee98313c2bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El promedio ponderado de los números es: 14.90\n"
           ]
         }
       ]
