--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -502,7 +502,7 @@
       "metadata": {
         "id": "FabQ7jQf_8Xt"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -520,7 +520,7 @@
         },
         "outputId": "def9cd56-dd20-464f-9c11-019d54919ced"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,7 +580,7 @@
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +596,7 @@
         },
         "outputId": "945c7c52-7e6b-41d4-850d-592794a3c871"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -623,7 +623,7 @@
         },
         "outputId": "41e437a3-d7af-44d8-f765-b2ee3a5a1b7d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +651,7 @@
         "id": "O1sX6E7MZCtk",
         "outputId": "905b1a5b-affc-4816-ca9e-c4946d593983"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,7 +700,7 @@
       "metadata": {
         "id": "ityEWqvh_2wK"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -738,7 +738,7 @@
       "metadata": {
         "id": "icDWtYTjBO0n"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +777,7 @@
         },
         "outputId": "183adad5-f88a-4f41-91c1-770828fb7065"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
         },
         "outputId": "d8b8aa96-a855-4e51-93fb-d315128162dd"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         },
         "outputId": "02bf01a7-119b-462f-d2d3-4481db21175b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -898,7 +898,7 @@
         },
         "outputId": "30be5990-da83-46c6-8e00-fd907bdec375"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -941,7 +941,7 @@
         },
         "outputId": "28ee148e-77ce-44c4-f172-8921574898d9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -992,7 +992,7 @@
         "id": "bo8yOqliavNm",
         "outputId": "218331ee-c548-4299-f739-25dce94d5fdb"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1022,7 +1022,7 @@
         "id": "pZgR5czwa3rz",
         "outputId": "d8b0e2d0-39c3-4723-af83-3c3ccd630887"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1052,7 @@
         "id": "nWu3K23QbCmB",
         "outputId": "3e50d086-f8dd-4fda-fc2c-2645a43b27ed"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1091,7 +1091,7 @@
         },
         "outputId": "6b250a3c-4e4a-46b0-de17-246b46dc4e29"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1114,7 +1114,7 @@
         },
         "outputId": "e9d3f48f-13ef-474f-c27a-1767fd47eda8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1165,7 +1165,7 @@
         },
         "outputId": "036a82d6-6b2f-46f4-a54c-a5b8ee9bb905"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1188,7 +1188,7 @@
         },
         "outputId": "076dc041-0484-4f56-8bf3-cb823ad31f0a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1214,7 +1214,7 @@
         },
         "outputId": "cd568447-89a1-49b5-8eb8-c2f6d4dc4937"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1237,7 +1237,7 @@
         "id": "8FCaC_9hc6Q8",
         "outputId": "9a1efa09-a8de-441b-ac7f-f3b1a98725c3"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1274,7 +1274,7 @@
         },
         "outputId": "a2ff705a-aaa5-45fc-b645-9c13ea552928"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1300,7 +1300,7 @@
         "id": "R7qnUfsvf1ht",
         "outputId": "31c741df-22ec-4d7c-ae7b-78d1daf3defd"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1324,7 @@
         "id": "8MngVi9mgje7",
         "outputId": "2b021627-04a4-4391-9ca2-013e2840f2ff"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1350,7 +1350,7 @@
         "id": "6h6R19b_gkze",
         "outputId": "63fcb63d-41a4-427c-d051-b526ce83ebdc"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1373,7 @@
         "id": "qrrgKTNRg9Kr",
         "outputId": "09614f6b-37e3-4570-8c86-020d5cc928d4"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1397,7 +1397,7 @@
         "id": "1esBdQmlhIdR",
         "outputId": "26720433-4996-4cb7-e11f-4f6641c402ca"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1421,7 +1421,7 @@
         "id": "6joV2OvwhS9X",
         "outputId": "c9cd75fa-94f4-440c-a70d-ee2e2ba489cf"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1447,7 +1447,7 @@
         "id": "nCrs05LMhZjY",
         "outputId": "a16d8730-f368-4954-b7fb-992b652a1dff"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1470,7 +1470,7 @@
         "id": "ykfANBURhsUI",
         "outputId": "2d3aa613-87be-4833-ee02-8679d9951312"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1496,7 +1496,7 @@
         "id": "w4ZVY7k6hxFV",
         "outputId": "62c05d03-2a64-43a9-adb0-84528c670cf4"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1521,7 +1521,7 @@
         "id": "eEQ_Nq5gh6vk",
         "outputId": "bf0b19e3-29fe-4d6e-e69c-6407890f27ac"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1544,7 +1544,7 @@
         "id": "a4Gcrnj2iFUl",
         "outputId": "7697e0e6-f1fa-4997-f64e-f6f1508951aa"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1567,7 @@
         "id": "rRNwuwZdiMWN",
         "outputId": "30aa3356-2b90-4bd9-b5e0-2bd10503c3c9"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1601,7 +1601,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1628,7 +1628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1657,7 +1657,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,7 +1686,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1715,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,7 +1744,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1772,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1800,7 +1800,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1828,7 +1828,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1856,7 +1856,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1884,7 +1884,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1914,7 +1914,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1942,13 +1942,280 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "El promedio ponderado de los números es: 14.90\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EDITANDO TEXTO"
+      ],
+      "metadata": {
+        "id": "gHTZOV6gGDQ7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#14 - Crea una variable llamada \"frase\" y asígnale una cadena de texto de tu elección. Luego, imprime la frase en pantalla.\n",
+        "frase = 'El éxito es la suma de pequeños esfuerzos repetidos día tras día.'\n",
+        "print(frase)"
+      ],
+      "metadata": {
+        "id": "WDSUKaPsGHgq",
+        "outputId": "8dc6df68-aa49-4769-891b-8dd18380e709",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El éxito es la suma de pequeños esfuerzos repetidos día tras día.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 15 - Crea un código que solicite una frase y luego imprima la frase en pantalla.\n",
+        "frase2 = input('Ingrese una frase: ')\n",
+        "print(frase2)"
+      ],
+      "metadata": {
+        "id": "sDw7o82XGXLP",
+        "outputId": "e96eb13c-635f-4f44-c934-8ad2b662d43f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase: Hola Mundo\n",
+            "Hola Mundo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 16 - Crea un código que solicite una frase al usuario y luego imprima la misma frase ingresada pero en mayúsculas.\n",
+        "frase3 = input('Ingrese una frase: ')\n",
+        "print(frase3.upper())"
+      ],
+      "metadata": {
+        "id": "_LyihwE5GqRr",
+        "outputId": "f80caa1a-72c5-4845-ac6d-96c82528317a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase: hola soy gokú\n",
+            "HOLA SOY GOKÚ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 17 - Crea un código que solicite una frase al usuario y luego imprima la misma frase ingresada pero en minúsculas.\n",
+        "frase4 = input('Ingrese una frase: ')\n",
+        "print(frase4.lower())"
+      ],
+      "metadata": {
+        "id": "pNlSqjF5G1PJ",
+        "outputId": "4fa6e005-4b3d-48ca-e459-e1f43998eb43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase: HOLA MUNDO\n",
+            "hola mundo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 18 - Crea una variable llamada \"frase\" y asígnale una cadena de texto de tu elección. Luego, imprime la frase sin espacios en blanco al principio y al final.\n",
+        "frase5 = '     El éxito es la suma de pequeños esfuerzos repetidos día tras día.     '\n",
+        "print(frase5.strip())"
+      ],
+      "metadata": {
+        "id": "tolBmdjOHGTq",
+        "outputId": "d2cb653f-be69-4e95-bfbb-3a22a2dd5e42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El éxito es la suma de pequeños esfuerzos repetidos día tras día.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 19 - Crea un código que solicite una frase al usuario y luego imprima la misma frase sin espacios en blanco al principio y al final.\n",
+        "frase6 = input('Ingrese una frase: ')\n",
+        "print(frase6.strip())"
+      ],
+      "metadata": {
+        "id": "FPlChhKRHXql",
+        "outputId": "5df4f1dd-c4ff-4f1a-c8b3-f2955a9659a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase:            hola mundo          \n",
+            "hola mundo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 20 - Crea un código que solicite una frase al usuario y luego imprima la misma frase sin espacios en blanco al principio y al final, además de convertirla a minúsculas.\n",
+        "frase7 = input('Ingrese una frase: ')\n",
+        "print(frase7.strip().lower())"
+      ],
+      "metadata": {
+        "id": "yrcR8pgYHnLa",
+        "outputId": "dcf0275d-c985-4505-b7ea-76153d600f44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase:      HOLA SOY TU PADRE   \n",
+            "hola soy tu padre\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 21 - Crea un código que solicite una frase al usuario y luego imprima la misma frase con todas las vocales \"e\" reemplazadas por la letra \"f\".\n",
+        "frase8 = input('Ingrese una frase: ')\n",
+        "print(frase8.replace('e','f'))"
+      ],
+      "metadata": {
+        "id": "fmParaVMIWIB",
+        "outputId": "a86972fd-c2e8-430b-98e6-d2083b763e5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase: Perro escondido debajo de la mesa\n",
+            "Pfrro fscondido dfbajo df la mfsa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 22 - Crea un código que solicite una frase al usuario y luego imprima la misma frase con todas las vocales \"a\" reemplazadas por el carácter \"@\".\n",
+        "frase9 = input('Ingrese una frase: ')\n",
+        "print(frase9.replace('a','@'))"
+      ],
+      "metadata": {
+        "id": "fM9g-9PiIsY5",
+        "outputId": "5d7323ac-3556-40a2-8f8c-c7606e0fd4a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase: Daniel Gallardo\n",
+            "D@niel G@ll@rdo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 23 - Crea un código que solicite una frase al usuario y luego imprima la misma frase con todas las consonantes \"s\" reemplazadas por el carácter \"$\".\n",
+        "frase10 = input('Ingrese una frase: ')\n",
+        "print(frase10.replace('s','$'))"
+      ],
+      "metadata": {
+        "id": "lRiwkjOaI2si",
+        "outputId": "3e4f03b3-cde3-425e-eb0a-12407629c479",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una frase: Soy su señor silencioso.\n",
+            "Soy $u $eñor $ilencio$o.\n"
           ]
         }
       ]
